# piciot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  lwip.patch
.github/workflows/: cmake-single-platform.yml
src/: CMakeLists.txt  main.cpp  message_queue.cpp  message_queue.h  mqtt_client.cpp  mqtt_client.h  piciot_version.h.in  version.h.in
